--- a/src/client/styles/typography.scss
+++ b/src/client/styles/typography.scss
@@ -1,6 +1,6 @@
 html, body {
   font-family: 'Share', sans-serif;
-  font-size: 14px;
+  font-size: 14pt;
   // font-weight: $font-weight-text;
   line-height: 1.5em;
   background: $color-bg;
@@ -12,16 +12,16 @@ span, a, img, i, u, b, small, strong {
 }
 
 h1, h2, h3 {
-  margin: 0.5em 0 1em 0;
+  margin: 0.5em 0;
   line-height: 1.1em;
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 
 h3 {
