--- a/src/http/templates/layout/header.ejs
+++ b/src/http/templates/layout/header.ejs
@@ -30,7 +30,7 @@
       </a>
     </div>
     <!-- Temporary text -->
-    <div class="header-item" style="text-align: right; flex: 1; font-size: 12pt; color: #888">
+    <div class="header-item header-coming-soon">
       Full website coming soon!
     </div>
   </div>
