--- a/src/http/templates/layout/footer.ejs
+++ b/src/http/templates/layout/footer.ejs
@@ -1,5 +1,6 @@
 <% if (livereload) { %>
 <script src="http://localhost:35729/livereload.js?snipver=1"></script>
 <% } %>
+<script src="/bundles/client.bundle.js"></script>
 </body>
 </html>
