--- a/src/http/templates/layout/header.ejs
+++ b/src/http/templates/layout/header.ejs
@@ -10,8 +10,7 @@
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share:400,400i,700,700i&amp;subset=latin-ext">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,400i,500,500i,700,700i&amp;subset=cyrillic,cyrillic-ext,latin-ext">
-<link rel="stylesheet" href="https://unpkg.com/mdi@2.0.46/css/materialdesignicons.min.css">
-<link rel="stylesheet" href="/styles/index.css">
+<link rel="stylesheet" href="/bundles/client.bundle.css">
 
 </head>
 <body>
