Add a KitchenSink react component

--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -4,8 +4,9 @@
 @import './typography.scss';
 
 // Components
-@import './components/header.scss';
 @import './components/button.scss';
+@import './components/header.scss';
+@import './components/spacing.scss';
 
 // Misc
 .container {
