--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -6,6 +6,7 @@
 // Components
 @import './components/button.scss';
 @import './components/header.scss';
+@import './components/server.scss';
 @import './components/spacing.scss';
 
 // Misc
