--- a/src/http/templates/download.ejs
+++ b/src/http/templates/download.ejs
@@ -1,5 +1,12 @@
 <% include layout/header %>
 
+<!--
+Known mirrors:
+http://mirror.null.one/
+https://get.metra.pw/
+http://sebastian.network/warsow/
+-->
+
 <div class="content download">
   <h1>Download options</h1>
   <p>
@@ -7,19 +14,19 @@
   </p>
   <p>
     <a class="button button-slanted button-rose"
-      href="http://sebastian.network/warsow/warsow_21_setup.exe"
+      href="http://mirror.null.one/warsow_21_setup.exe"
       title="Windows (.exe installer)">
       Windows
       <i class="mdi mdi-windows"></i>
     </a>
     <a class="button button-slanted button-rose"
-      href="http://sebastian.network/warsow/warsow_21.dmg"
+      href="http://mirror.null.one/warsow_21.dmg"
       title="Mac OS X 10.8/10.9/10.10 (.dmg)">
       Mac OS X
       <i class="mdi mdi-apple"></i>
     </a>
     <a class="button button-slanted button-rose"
-      href="http://sebastian.network/warsow/warsow_21_unified.tar.gz"
+      href="http://mirror.null.one/warsow_21_unified.tar.gz"
       title="Unified Windows + Linux package (.tar.gz)">
       Linux
       <i class="mdi mdi-linux"></i>
@@ -27,12 +34,12 @@
   </p>
   <p>
     <a class="button button-slanted"
-      href="http://sebastian.network/warsow/warsow_21_sdk.tar.gz">
+      href="http://mirror.null.one/warsow_21_unified.tar.gz">
       Warsow 2.1 unified (windows + linux, tar.gz)
       <i class="mdi mdi-file"></i>
     </a>
     <a class="button button-slanted"
-      href="http://sebastian.network/warsow/warsow_21_sdk.tar.gz">
+      href="http://mirror.null.one/warsow_21_sdk.tar.gz">
       Warsow 2.1 SDK (source code + tools)
       <i class="mdi mdi-file"></i>
     </a>
