--- a/src/http/templates/download.ejs
+++ b/src/http/templates/download.ejs
@@ -14,19 +14,19 @@ http://sebastian.network/warsow/
   </p>
   <p>
     <a class="button button-slanted button-rose"
-      href="http://mirror.null.one/warsow_21_setup.exe"
+      href="http://sebastian.network/warsow/warsow_21_setup.exe"
       title="Windows (.exe installer)">
       Windows
       <i class="mdi mdi-windows"></i>
     </a>
     <a class="button button-slanted button-rose"
-      href="http://mirror.null.one/warsow_21.dmg"
-      title="Mac OS X 10.8/10.9/10.10 (.dmg)">
-      Mac OS X
+      href="http://sebastian.network/warsow/warsow_21.dmg"
+      title="macOS (.dmg)">
+      macOS
       <i class="mdi mdi-apple"></i>
     </a>
     <a class="button button-slanted button-rose"
-      href="http://mirror.null.one/warsow_21_unified.tar.gz"
+      href="http://sebastian.network/warsow/warsow_21_unified.tar.gz"
       title="Unified Windows + Linux package (.tar.gz)">
       Linux
       <i class="mdi mdi-linux"></i>
@@ -34,12 +34,12 @@ http://sebastian.network/warsow/
   </p>
   <p>
     <a class="button button-slanted"
-      href="http://mirror.null.one/warsow_21_unified.tar.gz">
+      href="http://sebastian.network/warsow/warsow_21_unified.tar.gz">
       Warsow 2.1 unified (windows + linux, tar.gz)
       <i class="mdi mdi-file"></i>
     </a>
     <a class="button button-slanted"
-      href="http://mirror.null.one/warsow_21_sdk.tar.gz">
+      href="http://sebastian.network/warsow/warsow_21_sdk.tar.gz">
       Warsow 2.1 SDK (source code + tools)
       <i class="mdi mdi-file"></i>
     </a>
