Edit the greeting message

--- a/src/http/templates/index.ejs
+++ b/src/http/templates/index.ejs
@@ -51,19 +51,21 @@
       </div>
       <div class="motto-quote-body">
         <p>
-          Warsow is played by some of the most skilled gamers from around the
-          world. If you're looking for a challenge, you've definitely come to
-          the right place. So here's a few tips which will improve your gaming
-          experience within Warsow:
+          Since 2005, Warsow is considered as one of the skillest games of the
+          fast-paced shooter esport scene. So if you're looking for some
+          hardcore/oldskool challenge, you're at the right place.
+        </p>
+        <p>
+          Now, here's few tips which will strongly improve your gaming
+          experience:
           <ul>
-            <li>Nobody is forced to use the tips or tutorial supplied. Freedom is what makes the right choices more worthwhile.</li>
-            <li>Hi, GLHF, GG: These never hurt by saying them - without respect or sportsmanship, there is no eSport.</li>
-            <li>Learn to lose without becoming frustrated. Each loss should be viewed as an opportunity to improve upon game knowledge.</li>
-            <li>Learn to win without pretension. Each win is an opportunity to share knowledge.</li>
+            <li>Hi, GLHF, GG, BB are fundamentals of esport;</li>
+            <li>Each loss is an opportunity to improve knowledge;</li>
+            <li>Each win is an opportunity to share knowledge.</li>
           </ul>
         </p>
         <p>
-          Thanks for your attention, and above all, Good Luck and Have Fun!
+          Thanks for your attention and once again, welcome to Warsow!
         </p>
       </div>
     </div>
