--- a/src/http/templates/download.ejs
+++ b/src/http/templates/download.ejs
@@ -13,35 +13,84 @@ http://sebastian.network/warsow/
     Warsow is completely free to download and play, available for Windows, Linux and Mac OS X.
   </p>
   <p>
-    <a class="button button-slanted button-rose"
-      href="http://sebastian.network/warsow/warsow_21_setup.exe"
-      title="Windows (.exe installer)">
-      Windows
-      <i class="mdi mdi-windows"></i>
-    </a>
-    <a class="button button-slanted button-rose"
-      href="http://sebastian.network/warsow/warsow_21.dmg"
-      title="macOS (.dmg)">
-      macOS
-      <i class="mdi mdi-apple"></i>
-    </a>
-    <a class="button button-slanted button-rose"
-      href="http://sebastian.network/warsow/warsow_21_unified.tar.gz"
-      title="Unified Windows + Linux package (.tar.gz)">
-      Linux
-      <i class="mdi mdi-linux"></i>
-    </a>
+    <b>Important:</b> As of December 21, we've updated the unified package to
+    include all recent pure paks which are required to play the game. If you
+    have broken UI or getting errors about missing paks, you should download
+    the new release.
   </p>
   <p>
-    <a class="button button-slanted"
+    <a class="button button-flex button-slanted button-purple button-icon"
       href="http://sebastian.network/warsow/warsow_21_unified.tar.gz">
-      Warsow 2.1 unified (windows + linux, tar.gz)
-      <i class="mdi mdi-file"></i>
+      Warsow 2.1.2
+      <i class="icon icon-big mdi mdi-download"></i>
+      <span class="button-small-text">
+        Unified (Windows + Linux, tar.gz)
+      </span>
     </a>
-    <a class="button button-slanted"
+  </p>
+
+  <div class="divider"></div>
+
+  <p>
+    Other downloads:
+  </p>
+
+  <p>
+    <a class="button button-flex button-slanted button-rose button-icon"
+      href="http://sebastian.network/warsow/warsow_21_setup.exe"
+      title="Windows (.exe installer)">
+      Warsow 2.1.1
+      <i class="icon icon-big mdi mdi-windows"></i>
+      <span class="button-small-text">
+        Windows installer (.exe)
+      </span>
+    </a>
+    <a class="button button-flex button-slanted button-rose button-icon"
+      href="http://sebastian.network/warsow/warsow_21.dmg"
+      title="macOS (.dmg)">
+      Warsow 2.1.1
+      <i class="icon icon-big mdi mdi-apple"></i>
+      <span class="button-small-text">
+        macOS (.dmg)
+      </span>
+    </a>
+    <a class="button button-flex button-slanted button-rose button-icon"
+      href="http://sebastian.network/warsow/warsow_21_unified.tar.gz"
+      title="Unified Windows + Linux package (.tar.gz)">
+      Warsow 2.1.1
+      <i class="icon icon-big mdi mdi-linux"></i>
+      <span class="button-small-text">
+        Linux (.tar.gz)
+      </span>
+    </a>
+  </p>
+
+  <div class="divider"></div>
+
+  <p>
+    <a class="button button-flex button-slanted button-icon"
       href="http://sebastian.network/warsow/warsow_21_sdk.tar.gz">
-      Warsow 2.1 SDK (source code + tools)
-      <i class="mdi mdi-file"></i>
+      Warsow 2.1.1 SDK
+      <i class="icon icon-big mdi mdi-file"></i>
+      <span class="button-small-text">
+        Source code and tools
+      </span>
+    </a>
+    <a class="button button-flex button-slanted button-icon"
+      href="http://sebastian.network/warsow/data1_21pure.pk3">
+      data1_21pure.pk3
+      <i class="icon icon-big mdi mdi-file"></i>
+      <span class="button-small-text">
+        This package fixes bugs with bomb gametype
+      </span>
+    </a>
+    <a class="button button-flex button-slanted button-icon"
+      href="http://sebastian.network/warsow/UIfix/data2_21pure.pk3">
+      data2_21pure.pk3
+      <i class="icon icon-big mdi mdi-file"></i>
+      <span class="button-small-text">
+        This package fixes broken UI
+      </span>
     </a>
   </p>
 </div>
