--- a/src/client/styles/atomic.scss
+++ b/src/client/styles/atomic.scss
@@ -20,6 +20,18 @@
   text-align: right;
 }
 
+.text-dimmed {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.text-bold {
+  font-weight: bold;
+}
+
+.text-italic {
+  font-style: italic;
+}
+
 .float-left {
   float: left;
 }
