--- a/src/http/templates/index.ejs
+++ b/src/http/templates/index.ejs
@@ -27,10 +27,10 @@
         </p>
       </div>
       <div class="greeting-download">
-        <a class="button button-slanted button-flex button-purple"
+        <a class="button button-flex button-slanted button-purple button-icon text-center"
           href="/download">
           Download
-          <i class="mdi mdi-download"></i>
+          <i class="icon mdi mdi-download"></i>
         </a>
       </div>
     </div>
@@ -51,25 +51,92 @@
       </div>
       <div class="motto-quote-body">
         <p>
-          Since 2005, Warsow is considered as one of the skillest games of the
-          fast-paced shooter esport scene. So if you're looking for some
-          hardcore/oldskool challenge, you're at the right place.
+          Since 2005, Warsow is considered as one of the most skill-demanding
+          games in the fast-paced arena shooter scene. If you're looking for
+          some challenge or old-skool and hardcore gameplay, you came to the
+          right place!
         </p>
         <p>
-          Now, here's few tips which will strongly improve your gaming
-          experience:
+          Now, here's a few tips which will improve your gaming
+          experience in Warsow:
           <ul>
-            <li>Hi, GLHF, GG, BB are fundamentals of esport;</li>
-            <li>Each loss is an opportunity to improve knowledge;</li>
-            <li>Each win is an opportunity to share knowledge.</li>
+            <li>GL, HF &amp; GG - these are the fundamentals of esports. It
+            never hurts to say them, and will make them game a more pleasant
+            and fun experience for everyone;</li>
+            <li>Each loss is an opportunity to improve your skills and game knowledge;</li>
+            <li>Each win is an opportunity to share your game knowledge with others!</li>
           </ul>
         </p>
         <p>
-          Thanks for your attention and once again, welcome to Warsow!
+          Thank you for your attention and once again, welcome to Warsow!
         </p>
       </div>
     </div>
   </div>
 </div>
+
+<div class="divider divider-hidden"></div>
+
+<div class="container container-text">
+  <h1 class="text-center">What is Warsow?</h1>
+  <p>
+    <i>Speed and movement is what Warsow is all about.</i>
+  </p>
+
+  <p>
+    Like a true cyberathlete you jump, dash, dodge, and walljump your way
+    through the game. Grab power-ups before your enemy does, plant a bomb
+    before anyone sees you, and steal the enemy’s flag before they know what
+    is going on!
+  </p>
+
+  <p>
+    Our goal is to offer a fast and fun competitive first-person shooter
+    without hard graphical violence - Warsow has no blood or guts flying around.
+    Red stars instead of blood indicate hits and colored cubes replace guts as
+    gib effects.
+  </p>
+</div>
+
+<div class="divider divider-big"></div>
+
+<div class="container container-text">
+  <h1 class="text-center">Customizability</h1>
+
+  <p>
+    We put great emphasis on extreme customazibility, e-sports features
+    for players and enthusiast modders. Here's some sweet things:
+  </p>
+
+  <ul>
+    <li>Open source engine - freedom to make complete gameplay mods.</li>
+    <li>Easy scripting engine with Javascript/C++-like style syntax for making your own gametypes! (AngelScript)</li>
+    <li>Freedom to run your own servers (ranked servers will need server key, which we provide for free upon request!)</li>
+    <li>Flexible HUD scripting engine for customizing your HUD.</li>
+    <li>Powerful "e-sports"- features like Warsow TV with OGG audio stream support for providing improved streaming capabilities.</li>
+    <li>Highly customizable graphic settings.</li>
+    <li>Global stats and match result saving for following your matches.</li>
+    <li>Rich User Interface based on XHTML/CSS standards for layout and presentation and powerful scripting engine with Javascript/C++-like syntax.</li>
+    <li><b>Warsow will always remain a free to play game!</b></li>
+  </ul>
+</div>
+
+<div class="divider divider-big"></div>
+
+<div class="container text-center">
+  <a class="button button-slanted button-purple button-icon text-center"
+    href="/download">
+    Download now!
+    <i class="icon mdi mdi-download"></i>
+  </a>
+</div>
+
+<div class="divider divider-big divider-hidden"></div>
+
+<div class="container text-center text-dimmed">
+  Chasseur de Bots, 2017 ©
+</div>
+
+<div class="divider divider-hidden"></div>
 
 <% include layout/footer %>
