--- a/src/http/templates/index.ejs
+++ b/src/http/templates/index.ejs
@@ -57,18 +57,16 @@
           right place!
         </p>
         <p>
-          Now, here's a few tips which will improve your gaming
-          experience in Warsow:
+          Here's a few tips that will improve your gaming experience in Warsow:
           <ul>
             <li>GL, HF &amp; GG - these are the fundamentals of esports. It
-            never hurts to say them, and will make them game a more pleasant
-            and fun experience for everyone;</li>
+            never hurts to say them;</li>
             <li>Each loss is an opportunity to improve your skills and game knowledge;</li>
             <li>Each win is an opportunity to share your game knowledge with others!</li>
           </ul>
         </p>
         <p>
-          Thank you for your attention and once again, welcome to Warsow!
+          Thanks for your attention and once again, welcome to Warsow!
         </p>
       </div>
     </div>
