--- a/src/http/templates/index.ejs
+++ b/src/http/templates/index.ejs
@@ -59,10 +59,9 @@
         <p>
           Here's a few tips that will improve your gaming experience in Warsow:
           <ul>
-            <li>GL, HF &amp; GG - these are the fundamentals of esports. It
-            never hurts to say them;</li>
+            <li>GL, HF &amp; GG - these are the fundamentals of esports. It never hurts to say them;</li>
             <li>Each loss is an opportunity to improve your skills and game knowledge;</li>
-            <li>Each win is an opportunity to share your game knowledge with others!</li>
+            <li>Each win is an opportunity to share your game knowledge with the others!</li>
           </ul>
         </p>
         <p>
@@ -91,32 +90,14 @@
   <p>
     Our goal is to offer a fast and fun competitive first-person shooter
     without hard graphical violence - Warsow has no blood or guts flying around.
-    Red stars instead of blood indicate hits and colored cubes replace guts as
-    gib effects.
+    Red circles instead of blood indicate hits and colored triangles replace
+    guts as gib effects.
   </p>
-</div>
-
-<div class="divider divider-big"></div>
-
-<div class="container container-text">
-  <h1 class="text-center">Customizability</h1>
 
   <p>
     We put great emphasis on extreme customazibility, e-sports features
-    for players and enthusiast modders. Here's some sweet things:
+    for players and enthusiast modders.
   </p>
-
-  <ul>
-    <li>Open source engine - freedom to make complete gameplay mods.</li>
-    <li>Easy scripting engine with Javascript/C++-like style syntax for making your own gametypes! (AngelScript)</li>
-    <li>Freedom to run your own servers (ranked servers will need server key, which we provide for free upon request!)</li>
-    <li>Flexible HUD scripting engine for customizing your HUD.</li>
-    <li>Powerful "e-sports"- features like Warsow TV with OGG audio stream support for providing improved streaming capabilities.</li>
-    <li>Highly customizable graphic settings.</li>
-    <li>Global stats and match result saving for following your matches.</li>
-    <li>Rich User Interface based on XHTML/CSS standards for layout and presentation and powerful scripting engine with Javascript/C++-like syntax.</li>
-    <li><b>Warsow will always remain a free to play game!</b></li>
-  </ul>
 </div>
 
 <div class="divider divider-big"></div>
@@ -134,7 +115,5 @@
 <div class="container text-center text-dimmed">
   Chasseur de Bots, 2017 ©
 </div>
-
-<div class="divider divider-hidden"></div>
 
 <% include layout/footer %>
