--- a/src/http/templates/layout/footer.ejs
+++ b/src/http/templates/layout/footer.ejs
@@ -1,3 +1,5 @@
+<div class="divider divider-hidden"></div>
+
 <% if (livereload) { %>
 <script src="http://localhost:35729/livereload.js?snipver=1"></script>
 <% } %>
