Add download to navbar

--- a/src/http/templates/layout/header.ejs
+++ b/src/http/templates/layout/header.ejs
@@ -38,5 +38,12 @@
     <div class="header-item header-coming-soon">
       Full website coming soon!
     </div>
+    <div class="header-item">
+      <a class="button button-slanted button-purple button-icon"
+        href="/download">
+        Download now!
+        <i class="icon mdi mdi-download"></i>
+      </a>
+    </div>
   </div>
 </div>
