--- a/src/http/templates/download.ejs
+++ b/src/http/templates/download.ejs
@@ -14,8 +14,8 @@ http://sebastian.network/warsow/
   </p>
   <p>
     <b>Important:</b> As of December 21, we've updated the unified package to
-    include all recent pure paks which are required to play the game. If you
-    have broken UI or getting errors about missing paks, you should download
+    include all recent pure pk3s which are required to play the game. If you
+    have broken UI or getting errors about missing pk3, you should download
     the new release.
   </p>
   <p>
