Update download options and add proper meta tags and favicon

--- a/src/http/templates/download.ejs
+++ b/src/http/templates/download.ejs
@@ -13,18 +13,36 @@ http://sebastian.network/warsow/
     Warsow is completely free to download and play, available for Windows, Linux and Mac OS X.
   </p>
   <p>
-    <b>Important:</b> As of December 21, we've updated the unified package to
-    include all recent pure pk3s which are required to play the game. If you
-    have broken UI or getting errors about missing pk3, you should download
-    the new release.
+    <b>Important:</b> As of December 21, we've updated the release to
+    include all recent pure pk3s which are required to play the game. If game
+    has a broken UI or getting errors about missing pk3, you should download
+    the new release. Package for macOS will be ready soon.
   </p>
+
   <p>
-    <a class="button button-flex button-slanted button-purple button-icon"
-      href="http://sebastian.network/warsow/warsow_21_unified.tar.gz">
+    <a class="button button-flex button-slanted button-rose button-icon"
+      href="/mirror/warsow-2.1.2-setup.exe">
       Warsow 2.1.2
-      <i class="icon icon-big mdi mdi-download"></i>
+      <i class="icon icon-big mdi mdi-windows"></i>
+      <span class="button-small-text">
+        Windows installer (.exe)
+      </span>
+    </a>
+    <a class="button button-flex button-slanted button-rose button-icon"
+      href="/mirror/warsow-2.1.2.tar.gz">
+      Warsow 2.1.2
+      <i class="icon icon-big mdi mdi-linux"></i>
       <span class="button-small-text">
         Unified (Windows + Linux, tar.gz)
+      </span>
+    </a>
+    <a class="button button-flex button-slanted button-icon"
+      style="pointer-events: none; background: #444; color: #aaa"
+      title="This version is outdated.">
+      Warsow 2.1
+      <i class="icon icon-big mdi mdi-apple"></i>
+      <span class="button-small-text">
+        macOS (.dmg) (outdated since 2017-12-21)
       </span>
     </a>
   </p>
@@ -36,42 +54,10 @@ http://sebastian.network/warsow/
   </p>
 
   <p>
-    <a class="button button-flex button-slanted button-rose button-icon"
-      href="http://sebastian.network/warsow/warsow_21_setup.exe"
-      title="Windows (.exe installer)">
-      Warsow 2.1
-      <i class="icon icon-big mdi mdi-windows"></i>
-      <span class="button-small-text">
-        Windows installer (.exe)
-      </span>
-    </a>
-    <a class="button button-flex button-slanted button-rose button-icon"
-      href="http://sebastian.network/warsow/warsow_21.dmg"
-      title="macOS (.dmg)">
-      Warsow 2.1
-      <i class="icon icon-big mdi mdi-apple"></i>
-      <span class="button-small-text">
-        macOS (.dmg)
-      </span>
-    </a>
-    <a class="button button-flex button-slanted button-rose button-icon"
-      href="http://sebastian.network/warsow/warsow_21_unified.tar.gz"
-      title="Unified Windows + Linux package (.tar.gz)">
-      Warsow 2.1
-      <i class="icon icon-big mdi mdi-linux"></i>
-      <span class="button-small-text">
-        Linux (.tar.gz)
-      </span>
-    </a>
-  </p>
-
-  <div class="divider"></div>
-
-  <p>
     <a class="button button-flex button-slanted button-icon"
       href="http://sebastian.network/warsow/warsow_21_sdk.tar.gz">
       Warsow 2.1 SDK
-      <i class="icon icon-big mdi mdi-file"></i>
+      <i class="icon icon-big mdi mdi-download"></i>
       <span class="button-small-text">
         Source code and tools
       </span>
@@ -81,7 +67,7 @@ http://sebastian.network/warsow/
       data1_21pure.pk3
       <i class="icon icon-big mdi mdi-file"></i>
       <span class="button-small-text">
-        This package fixes bugs with bomb gametype
+        This pk3 fixes bugs with bomb gametype
       </span>
     </a>
     <a class="button button-flex button-slanted button-icon"
@@ -89,7 +75,7 @@ http://sebastian.network/warsow/
       data2_21pure.pk3
       <i class="icon icon-big mdi mdi-file"></i>
       <span class="button-small-text">
-        This package fixes broken UI
+        This pk3 fixes broken UI
       </span>
     </a>
   </p>
