--- a/src/http/templates/layout/header.ejs
+++ b/src/http/templates/layout/header.ejs
@@ -6,11 +6,22 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<meta property="og:title" content="Warsow">
+<meta property="og:site_name" content="Warsow">
+<meta property="og:type" content="article">
+<meta property="og:image" content="https://www.warsow.net/images/warsow-logo-256x256.png">
+<meta property="og:image:width" content="256">
+<meta property="og:image:height" content="256">
+<meta property="fb:app_id" content="1437287959922489">
+
 <title>Warsow</title>
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share:400,400i,700,700i&amp;subset=latin-ext">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,400i,500,500i,700,700i&amp;subset=cyrillic,cyrillic-ext,latin-ext">
 <link rel="stylesheet" href="/bundles/client.bundle.css">
+<link rel="image_src" href="/images/warsow-logo-256x256.png">
+<link rel="shortcut icon" href="/images/warsow-logo-256x256.png">
 
 </head>
 <body>
