Added background video (doesnt show up atm)
problem: body has a background color and this overwrites the z-index: -100 of the video.

--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -43,3 +43,20 @@
 .mdi {
   min-width: 1em;
 }
+
+#bgvid {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background: url("/images/y37fbax.jpg") no-repeat;
+    background-size: cover;
+}
