--- a/src/http/templates/index.ejs
+++ b/src/http/templates/index.ejs
@@ -35,6 +35,9 @@
       </div>
     </div>
   </div>
+  <video playsinline autoplay muted loop poster="images/y37fbax.jpg" id="bgvid">
+    <source src="videos/warsowvid.mp4" type="video/mp4">
+  </video>
 </div>
 
 <div class="motto">
