--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -45,14 +45,11 @@
 }
 
 #bgvid {
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
+    width: 100%;
     height: auto;
-    z-index: -100;
     -ms-transform: translateX(-50%) translateY(-50%);
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
