--- a/src/http/templates/download.ejs
+++ b/src/http/templates/download.ejs
@@ -13,15 +13,15 @@ http://sebastian.network/warsow/
     Warsow is completely free to download and play, available for Windows, Linux and Mac OS X.
   </p>
   <p>
-    <b>Important:</b> As of December 21, we've updated the release to
+    <b>Important:</b> As of 2017-12-21, we've updated the release to
     include all recent pure pk3s which are required to play the game. If game
     has a broken UI or getting errors about missing pk3, you should download
-    the new release. Package for macOS will be ready soon.
+    the new release.
   </p>
 
   <p>
     <a class="button button-flex button-slanted button-rose button-icon"
-      href="/mirror/warsow-2.1.2-setup.exe">
+      href="http://sebastian.network/warsow/warsow-2.1.2-setup.exe">
       Warsow 2.1.2
       <i class="icon icon-big mdi mdi-windows"></i>
       <span class="button-small-text">
@@ -29,20 +29,19 @@ http://sebastian.network/warsow/
       </span>
     </a>
     <a class="button button-flex button-slanted button-rose button-icon"
-      href="/mirror/warsow-2.1.2.tar.gz">
+      href="http://sebastian.network/warsow/warsow-2.1.2.tar.gz">
       Warsow 2.1.2
       <i class="icon icon-big mdi mdi-linux"></i>
       <span class="button-small-text">
         Unified (Windows + Linux, tar.gz)
       </span>
     </a>
-    <a class="button button-flex button-slanted button-icon"
-      style="pointer-events: none; background: #444; color: #aaa"
-      title="This version is outdated.">
-      Warsow 2.1
+    <a class="button button-flex button-slanted button-rose button-icon"
+      href="http://sebastian.network/warsow/warsow-2.1.2.dmg">
+      Warsow 2.1.2
       <i class="icon icon-big mdi mdi-apple"></i>
       <span class="button-small-text">
-        macOS (.dmg) (outdated since 2017-12-21)
+        macOS (.dmg)
       </span>
     </a>
   </p>
