--- a/src/http/templates/index.ejs
+++ b/src/http/templates/index.ejs
@@ -25,6 +25,21 @@
           Set in a futuristic cartoonish world, Warsow is a completely free
           fast-paced first-person shooter (FPS) for Windows, Linux and macOS.
         </p>
+        <p>
+          Join us on:
+          <a class="button button-icon button-slanted button-color-discord"
+            href="https://discord.gg/4t65eJE"
+            target="_blank">
+            Discord
+            <i class="icon mdi mdi-discord"></i>
+          </a>
+          <a class="button button-icon button-slanted button-color-reddit"
+            href="https://www.reddit.com/r/warsow/"
+            target="_blank">
+            Reddit
+            <i class="icon mdi mdi-reddit"></i>
+          </a>
+        </p>
       </div>
       <div class="greeting-download">
         <a class="button button-flex button-slanted button-purple button-icon text-center"
@@ -113,7 +128,7 @@
 <div class="divider divider-big divider-hidden"></div>
 
 <div class="container text-center text-dimmed">
-  Chasseur de Bots, 2017 ©
+  Chasseur de Bots, <%= (new Date()).getFullYear() %> ©
 </div>
 
 <% include layout/footer %>
