--- a/src/http/templates/layout/header.ejs
+++ b/src/http/templates/layout/header.ejs
@@ -47,7 +47,7 @@
     </div>
     <!-- Temporary text -->
     <div class="header-item header-coming-soon">
-      Full website coming soon!
+      <!-- Full website coming soon! -->
     </div>
     <div class="header-item">
       <a class="button button-slanted button-purple button-icon"
