Add text to the description meta tag

--- a/src/http/templates/layout/header.ejs
+++ b/src/http/templates/layout/header.ejs
@@ -4,7 +4,7 @@
 
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<meta name="description" content="">
+<meta name="description" content="Set in a futuristic cartoonish world, Warsow is a completely free fast-paced first-person shooter (FPS) for Windows, Linux and macOS.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <meta property="og:title" content="Warsow">
